@@ -228,6 +228,7 @@ char *addroute;
 char *delroute;
 char *ip_up;
 char *ip_down;
+char *ip_goingdown;
 char *acctlog;
 char *pidlog;
 char *fifoname;
@@ -462,8 +463,7 @@ int fw_reset_wait(void);
 int next_alarm(void);
 void buffer_packet(unsigned int,unsigned char *);
 void forward_buffer(void);
-void run_ip_up(void);
-void run_ip_down(void);
+void run_state_script(char *name, char *script, int background);
 void set_ptp(char *, int, char *, int);
 void del_ptp(char *, int, char *);
 void add_routes(char *, int, char *, char *, int);
