@@ -769,6 +769,15 @@ with other actions. This means that it is possible to have more than
 one copy of the script running at the same time. You should consider
 this when writing your script.
 .TP
+.B ip-goingdown \fI<script-name>\fR
+The designated script or executable
+is called by \fBdiald\fR just before the IP layer is brought down.
+The script receives the same arguments as the addroute script.
+Diald waits for this script to terminate before proceeding
+with other actions. Note that this script is only run if \fBdiald\fR
+is going to terminate the link. If the remote terminates the link
+this script is not and cannot be run.
+.TP
 .B ip-down \fI<script-name>\fR
 The designated script or executable
 is called by \fBdiald\fR whenever the IP layer is brought down.
